--- a/app/views/login/login.html
+++ b/app/views/login/login.html
@@ -1,22 +1,23 @@
 <style>
   body {
-    background-color: #ffffff;
+    background-color: #f1f1f1;
     font-family: 'Calibri';
   }
 
 </style>
 
 
-<div class="col-md-12" style="margin-top: 50px;">
+<div class="col-md-12 col-sm-12 col-xs-12" style="margin-top: 100px;">
 
-  <div class=" col-md-4 card col-md-offset-4 w3-container w3-center w3-animate-top" style="padding: 30px;">
-    <div class="col-md-12 text-center">
-      <img src="images/startv.png" width="200" height="150">
+  <div class=" col-md-4 card col-md-offset-4  col-xs-8 card col-xs-offset-2 col-sm-8 card col-sm-offset-2 " style="padding: 50px;">
+    <div class="col-md-12 text-center" >
+      <img src="images/Logostartv.png" class="img" style="margin:20px;" width="185" height="130">
+      
     </div>
     <form class="login-form" angular-validator-submit="$ctrl.login()" autocomplete="off" name="myForm" novalidate angular-validator>
       <div class="col-md-12">
 
-        <h3 class="text-info text-center" style="color: #ffc526;">Accesa al sistema bla bla vla</h3>
+      <!--   <h3 class="text-info text-center" style="color: #ffc526;">Accesa al sistema</h3> -->
         <p class="text-muted text-center">Ingresa tu usuario y contraseña proporcionado</p>
 
 
@@ -37,10 +38,10 @@
 
 
       <div class="col-md-12">
-        <div class="col-md-6">
+        <div class="col-md-6 col-xs-12 col-sm-12">
           <a href="#!/recover" class="text-info">Olvidé mi contraseña</a>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6  ">
           <button type="submit" class="btn btn-warning btn-block">Acceder</button>
         </div>
       </div>
