--- a/app/views/recover.html
+++ b/app/views/recover.html
@@ -132,7 +132,7 @@
       <div class="col-md-12">
         <br>
         <button type="submit" ng-disabled="!form.$valid  ||  $ctrl.captcharesponse ==null || $ctrl.showMessageemail==true" class="btn btn-warning btn-block">Cambiar mis datos de acceso</button>
-        <p class="text-muted text-center">(Al aceptar et enviaremos un correo con tus nuevas credenciales de acceso)</p>
+        <p class="text-muted text-center">(Al aceptar te enviaremos un correo con tus nuevas credenciales de acceso)</p>
       </div>
     </form>
   </div>
