--- a/app/views/signin.html
+++ b/app/views/signin.html
@@ -70,7 +70,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="col-md-12">
-        <h3 class="text-primary text-center">Idenfica la serie de tu aparato</h3>
+        <h3 class="text-primary text-center">Identifica la serie de tu aparato</h3>
 
         <div class="col-md-6 text-center col-xs-12">
           <h3>Digital</h3>
@@ -95,7 +95,7 @@
       </div>
       <div class="col-md-9">
         <h3 style="color: white">
-          <b>¡Bienvenido tu información han sido validada! </b>
+          <b>¡Bienvenido tu información ha sido validada! </b>
         </h3>
       </div>
     </div>
@@ -187,7 +187,7 @@
             solo tienes que iniciar sesión con este correo <b> {{$ctrl.email }} </b> y tu contraseña<br><br><br>
             <h5> Atención a clientes:01 800 700 STAR (7827)</h5>
             <br>
-            <a href=""><h3> Iniciar sesión </h3></a>
+            <a href="#"><h3> Iniciar sesión </h3></a>
         </h3>
       </div>
 
