cambios de diseño

--- a/app/views/recover.html
+++ b/app/views/recover.html
@@ -20,7 +20,7 @@
         <span class="icon-bar"></span>
       </button>
 
-      <img src="images/startv.png" width="50" height="40">
+      <img src="images/Logostartv.png" width="50" height="40">
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -69,9 +69,9 @@
       <br>
       <div class="col-md-12">
         <br>
-        <div class="alert alert-info" role="alert">
+        <div class="alert alert-warning" role="alert">
           <i class="fa fa-info-circle" aria-hidden="true"></i> Si necesitas ayuda para saber la ubicación de la serie y el tipo de aparato puedes consultarla aquí
-          <a href="#" class="alert-link">Ayuda</a>
+          <a href="#!/ayuda" class="alert-link">Ayuda</a>
         </div>
       </div>
 
@@ -138,17 +138,17 @@
   </div>
 </div>
 
-
+<!--  -->
 <div class="col-md-6 col-md-offset-3 text-center" ng-if="$ctrl.showsuccess">
 
         <div class="alert alert-success" role="alert">
-            <h3>
+            <h4>
                 <strong>¡ Bien hecho!</strong> el reestablecimiento de tu contraseña  se ha completado correctamente, ahora puedes consultar tu estado de cuenta 
-                solo tienes que iniciar sesión con este correo <b> {{$ctrl.email }} </b> y tu nueva contraseña <br><br><br>                
-                <h5> Atención a clientes:01 800 700 STAR (7827)</h5>
-                <br>
-                <a href=""><h3> Iniciar sesión </h3></a>
-            </h3>
+                solo tienes que iniciar sesión con este correo <b> {{$ctrl.email }} </b> y tu nueva contraseña <br>               
+                <h4> Atención a clientes: 01 800 700 STAR (7827)</h4>
+                
+                <a href="#"><h3> Iniciar sesión </h3></a>
+            </h4>
           </div>
     
     
