--- a/app/views/login/login.html
+++ b/app/views/login/login.html
@@ -7,11 +7,11 @@
 </style>
 
 
-<div class="col-md-12 col-sm-12 col-xs-12" style="margin-top: 100px;">
+<div class="col-md-12 col-sm-12 col-xs-12" style="margin-top: 70px;">
 
-  <div class=" col-md-4 card col-md-offset-4  col-xs-8 card col-xs-offset-2 col-sm-8 card col-sm-offset-2 " style="padding: 50px;">
-    <div class="col-md-12 text-center" >
-      <img src="images/Logostartv.png" class="img" style="margin:20px;" width="185" height="130">
+  <div class="card col-md-4  col-md-offset-4  col-xs-12  col-sm-12" style="padding:30px; ">
+    <div class="col-md-12 text-center " style="margin-bottom:50px;">
+      <img src="images/Logostartv.png" class="img"  width="185" height="130">
       
     </div>
     <form class="login-form" angular-validator-submit="$ctrl.login()" autocomplete="off" name="myForm" novalidate angular-validator>
@@ -21,12 +21,12 @@
         <p class="text-muted text-center">Ingresa tu usuario y contraseña proporcionado</p>
 
 
-        <div class="form-group row">
+        <div class="form-group">
 
           <input type="text" placeholder="correo electrónico" name="nombre" ng-model="$ctrl.user" validate-on="dirty" class="form-control"
             required-message="'El usuario es obligatorio.'" required/>
         </div>
-        <div class="form-group row">
+        <div class="form-group">
 
           <input type="password" placeholder="password" name="password" ng-model="$ctrl.password" validate-on="dirty" class="form-control"
             required-message="'La contraseña es obligatoria.'" required/>
@@ -41,7 +41,7 @@
         <div class="col-md-6 col-xs-12 col-sm-12">
           <a href="#!/recover" class="text-info">Olvidé mi contraseña</a>
         </div>
-        <div class="col-md-6  ">
+        <div class="col-md-6 col-xs-12 col-sm-12 ">
           <button type="submit" class="btn btn-warning btn-block">Acceder</button>
         </div>
       </div>
