--- a/app/views/recover.html
+++ b/app/views/recover.html
@@ -1,43 +1,54 @@
 <style>
   html,
   body {
-    height: 100%;
+
     background-color: white;
     font-family: 'Calibri';
   }
 
+  .nav {
+    background-color: #251e1e;
+    border-color: #251e1e;
+    color: white;
+    padding: 10px;
+  }
+
+  .nav {
+    border-radius: 0px;
+  }
+
+  a {
+    padding: 10px;
+    text-decoration: none;
+    color: #fff;
+    font-size: 17px;
+  }
+
+  a:hover {
+    text-decoration: none;
+    color: #e2b22b;
+    font-size: 17px;
+  }
+
+  .capturaserie{
+    margin-top:0px;
+    background-color: #251e1e; padding:30px;
+    font-family: 'Roboto', sans-serif; color:white;
+  }
+
 </style>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-        aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+<div class="col-md-12 nav">
+    <div class="col-md-4" style="padding:10px;">
+        <img src="images/Logotipo_bco2-1968ace7.png">
+      </div>
+      <div class="col-md-4"></div>
+      <div class="col-md-4 text-right">
+   <br>
+        <a href="#" >Iniciar sesión</a>
+      </div>
+</div>
 
-      <img src="images/Logostartv.png" width="50" height="40">
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a href="#" class="text-info">Iniciar sesión</a>
-        </li>
-
-      </ul>
-    </div>
-    <!-- /.navbar-collapse -->
-  </div>
-  <!-- /.container-fluid -->
-</nav>
 <div class="col-md-12" ng-if="$ctrl.showvalidationform">
   <form class="login-form" angular-validator-submit="$ctrl.validar()" autocomplete="off" name="myForm" novalidate angular-validator>
     <h3 class="text-center text-primary">
