agregando recuperacion de password para ecommerce

--- a/app/views/signin.html
+++ b/app/views/signin.html
@@ -52,9 +52,8 @@
           <img src="images/Logotipo_bco2-1968ace7.png">
         </div>
         <div class="col-md-4"></div>
-        <div class="col-md-4 text-right">
-        
-          <a href="#" >Iniciar sesión</a>
+        <div class="col-md-4 text-right">        
+          <a href="#" >Iniciar sesión</a>         
         </div>
   </div>
  
@@ -91,7 +90,7 @@
   </div>
 </div>
  
-    <div class="col-md-12">
+    <div class="col-md-12" ng-if="$ctrl.showcapturaserie">
       <div class="col-md-12">
         <h3 class=" text-center">
           <b style="font-size:1.3em;">Identifica la serie de tu aparato</b>
