--- a/app/views/registro.html
+++ b/app/views/registro.html
@@ -55,7 +55,7 @@
           <div class="col-md-4 text-right">
           
           
-            <a href="http://189.204.147.26:2010/#!/auth/login" >Iniciar sesión</a> 
+            <a href="https://realizarpago.stargroup.com.mx:2010/#!/auth/login" >Iniciar sesión</a> 
           </div>
     </div>
    
@@ -194,7 +194,7 @@
         <div class="alert alert-warning text-center" role="alert">
   
           <h5>¿No reconoces esta información?,
-            <a class="alert-link" href="http://189.204.147.26:2010/EstadoCuentaApp/#!/registro" onclick="location.reload();">Intenta ingresando otra serie</a>
+            <a class="alert-link" href="https://realizarpago.stargroup.com.mx:5000/#!/registro" onclick="location.reload();">Intenta ingresando otra serie</a>
           </h5>
           <h6> Atención a clientes:01 800 700 STAR (7827)</h6>
         </div>
@@ -218,7 +218,7 @@
         <br>
         <h5> Atención a clientes:01 800 700 STAR (7827)</h5>
         <br>
-        <a href="http://189.204.147.26:2010/#!/auth/login" >Iniciar sesión</a> 
+        <a href="https://realizarpago.stargroup.com.mx:2010/#!/auth/login" >Iniciar sesión</a> 
       </h3>
     </div>
   
