--- a/app/views/login/login.html
+++ b/app/views/login/login.html
@@ -1,23 +1,163 @@
+
+ <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 <style>
   body {
     background-color: #f1f1f1;
-    font-family: 'Calibri';
+  
+  }
+  section {
+    padding: 24px;
   }
 
+  .formulario-login{
+    max-width: 400px;
+    height: 600px;
+    background-color: white;    
+    margin:0 auto;
+    margin-top: 50px;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.33);
+  }
+
+  .formulario-login img {
+    width: 210px;   
+    margin-top: 40px;
+}
+
+.formulario-login h3{
+    text-align: center;
+    color: #8c8e81;
+    font-size: 15px;  
+  }
+  .formulario-login form{
+    text-align: center;  
+  }
+
+  .controlform{
+    margin: 9px;
+    font-size: 20px;
+    padding: 5px;
+  }
+
+
+  section{
+    display: flex;
+    justify-content:space-around;
+  }
+
+  .submit{
+    width: auto;
+    font-size: 18px;
+    padding: 7px;
+    background-color: #FFC107;
+    border: none;
+    border-radius: 5px;
+  }
+
+  .submit:hover{
+    width: auto;
+    font-size: 18px;
+    padding: 7px;
+    background-color: rgb(197, 150, 7);
+    border: none;
+    border-radius: 5px;
+   
+  }
+
+
+  
+  @media screen and (max-width: 500px) {
+    .formulario-login {      
+      width: auto;
+      margin-top: 50px;
+      margin-left: 20px;
+      margin-right: 20px;
+      height: auto;
+      padding: 25px;
+  }
+
+  .controlform {
+    margin: 5px;
+    font-size: 16px;
+    padding: 3px;
+  }
+
+  .formulario-login img {
+    width: 185px;
+    margin-top: 0px;
+}
+
+    section {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+  } 
+     
+  .submit{   
+    margin: 9px;
+    font-size: 15px;
+    width: 150px;
+    padding: 7px;
+    background-color: #FFC107;
+    border: none;
+    border-radius: 5px;
+  }
+
+  .submit:hover{
+    width: 150px;
+    font-size: 15px;
+    padding: 7px;
+    background-color: rgb(197, 150, 7);
+    border: none;
+    border-radius: 5px;
+   
+  }
+    
+  }
+
+
+
+
 </style>
+<div class="formulario-login">
+   
+   <form angular-validator-submit="$ctrl.login()" autocomplete="off" name="myForm" novalidate angular-validator>
+      <img src="images/Logostartv.png">
+    <h3>Ingresa tu email y contraseña</h3>
+    <input type="email" placeholder="Correo Electrónico" class="controlform" name="nombre"
+    required-message="'El Correo Electrónico es obligatorio.'"
+    invalid-message="'Ingrese un correo electrónico válido.'"
+    required
+    validate-on="dirty" ng-model="$ctrl.user" >
+    <input type="password" placeholder="Contraseña"  class="controlform" name="password"
+    required-message="'La contraseña es obligatoria.'" required
+     ng-model="$ctrl.password" validate-on="dirty" >
+    <section>
+        <a href="#!/recover" class="text-info">Olvidé mi contraseña</a>
+        <button type="submit" class="submit"><i class="fa fa-sign-in" aria-hidden="true"></i> Ingresar</button>
+    </section>
+    <a href="#!/signin">¿Aún no estas registrado?
+      <b> Crear cuenta</b>
+    </a>
+   </form>
+  
+
+</div> 
 
 
+
+<!-- 
 <div class="col-md-12 col-sm-12 col-xs-12" style="margin-top: 70px;">
   <div class="card col-md-4  col-md-offset-4  col-xs-12  col-sm-12" style="padding:50px; ">
     <!--  <div class="col-md-12 text-center " style="margin-bottom:50px; background-color:black" >
       <img src="images/Logotipo_bco2-1968ace7.png" class="img" >
-    </div>  -->
+    </div>  
      <div class="col-md-12 text-center " style="margin-bottom:50px;">
       <img src="images/Logostartv.png" class="img" width="185" height="130">
     </div> 
     <form class="login-form" angular-validator-submit="$ctrl.login()" autocomplete="off" name="myForm" novalidate angular-validator>
       <div class="col-md-12">
-        <!--   <h3 class="text-info text-center" style="color: #ffc526;">Accesa al sistema</h3> -->
+        <!--   <h3 class="text-info text-center" style="color: #ffc526;">Accesa al sistema</h3> 
         <p class="text-muted text-center">Ingresa tu usuario y contraseña proporcionado</p>
         <div class="form-group">
           <input type="text" placeholder="correo electrónico" name="nombre" ng-model="$ctrl.user" validate-on="dirty" class="form-control"
@@ -52,7 +192,7 @@
   </div>
 
 
-</div>
+</div> -->
 
 
 
