--- a/app/views/recover.html
+++ b/app/views/recover.html
@@ -30,15 +30,45 @@
     font-size: 17px;
   }
 
-  .capturaserie{
-    margin-top:0px;
-    background-color: #251e1e; padding:30px;
-    font-family: 'Roboto', sans-serif; color:white;
-  }
+.capturaserie{
+ margin-top:0px;
+ background-color: #251e1e; padding:30px;
+ font-family: 'Roboto', sans-serif; color:white;
+}
+.titulo {
+  font-size: 35px;
+  font-family: Arial;
+  font-weight: bold;
+  color: #508452;
+  padding-bottom: 10px;
+}
+.descripcion1 {
+  color: #7f7954;
+  font-style: italic;
+}
+
+#formulario-recover
+ label {
+font-size: 16px;
+font-weight: bold;
+font-family: Helvetica, sans-serif;
+}
+#formulario-recover-submit  label{
+  font-size: 16px;
+font-weight: bold;
+font-family: Helvetica, sans-serif;
+}
+
+
+.form-control {
+  font-size: 18px;
+}
+
+
 
 </style>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-<div class="col-md-12 nav">
+<div class="col-md-12 nav col-sm-12">
     <div class="col-md-4" style="padding:10px;">
         <img src="images/Logotipo_bco2-1968ace7.png">
       </div>
@@ -48,113 +78,115 @@
         <a href="#" >Iniciar sesión</a>
       </div>
 </div>
-
-<div class="col-md-12" ng-if="$ctrl.showvalidationform">
-  <form class="login-form" angular-validator-submit="$ctrl.validar()" autocomplete="off" name="myForm" novalidate angular-validator>
-    <h3 class="text-center text-primary">
-      <b>Recupera tu contraseña</b>
-    </h3>
-
-    <br>
-    <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4">
-      <h4 class=" text-center">Ingresa la siguiente información para poder reestablecer tu contraseña</h4>
-      <div class="col-md-12">
-        <label>
-          <b> Ingresa tu email</b>
-        </label>
-        <input type="text" name="email" class="form-control" placeholder="Ingresa aquí el tu email" validate-on="dirty" required-message="'El email es es obligatorio.'"
-          required ng-model="$ctrl.email">
-      </div>
-      <div class="col-md-12">
-        <br>
-        <label>
-          <b> Ingresa la serie del aparato principal</b>
-        </label>
-        <input name="serie" type="text" class="form-control" placeholder="Ingresa aquí el número de serie" validate-on="dirty" required-message="'La serie es obligatoria.'"
-          required ng-model="$ctrl.serie">
-      </div>
-      <div class="col-md-6 col-md-offset-6 text-right">
-        <br>
-        <button class="btn btn-warning btn-block " ng-click="$ctrl.confirmar()"> Aceptar</button>
-      </div>
+<section id="formulario-recover">
+  <div class="col-md-12" ng-if="$ctrl.showvalidationform">
+    <form class="login-form" angular-validator-submit="$ctrl.validar()" autocomplete="off" name="myForm" novalidate angular-validator>
+      <h3 class="text-center text-primary titulo"> Recupera tu contraseña</h3>
       <br>
-      <div class="col-md-12">
-        <br>
-        <div class="alert alert-warning" role="alert">
-          <i class="fa fa-info-circle" aria-hidden="true"></i> Si necesitas ayuda para saber la ubicación de la serie y el tipo de aparato puedes consultarla aquí
-          <a href="#!/ayuda" class="alert-link">Ayuda</a>
+      <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4">
+        <h4 class=" text-center descripcion1">Ingresa la siguiente información para poder reestablecer tu contraseña</h4>
+        <div class="col-md-12">
+          <label>Ingresa tu email</label>
+          <input type="text" name="email" class="form-control" placeholder="Ingresa aquí el tu email" validate-on="dirty" required-message="'El email es es obligatorio.'"
+            required ng-model="$ctrl.email">
         </div>
-      </div>
-
-    </div>
-
-  </form>
-</div>
-
-<div class="col-md-12" ng-if="$ctrl.showresetform">
-  <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4">
-    <h3 class=" text-center">Proceso de reestablecimiento de contraseña</h3>
-    <!--   angular-validator-submit="$ctrl.reset()"-->
-    <!--  novalidate angular-validator-->
-    <form class="login-form" autocomplete="off" name="form" ng-submit="$ctrl.reset()">
-      <div class="alert alert-success" role="alert">
-        <b>¡Correcto!</b> la validación se hizo correctamente,ahora puedes elegir una nueva contraseña y modificar tu correo
-        con el que puedes accesar al sistema</div>
-
-      <div class="col-md-12">
-        <label>Correo electrónico actual</label>
-        <input type="email" class="form-control" name="correoactual" ng-keyup="$ctrl.valideEmail($ctrl.email)" class="form-control"
-          required ng-model="$ctrl.email">
-        <span class="text-danger" ng-show="$ctrl.wait">
-          <img src="images/Spinner.gif" width="20" height="20"> verificando......</span>
-        <span class="text-danger" ng-show="$ctrl.showMessageemail">
-          <i class="{{$ctrl.iconemail}}"></i>{{$ctrl.messageemail}}</span>
-        <p class="text-help text-danger">
-          <b>¡ Atención !</b> este es el correo de acceso al sistema, al modificarlo tendras que acceder con el nuevo correo
-          registrado </p>
-        <span class="text-danger" ng-show="!form.correoactual.$valid"> ¡No es un correo valido!</span>
-      </div>
-
-      <div class="col-md-12">
-        <br>
-        <div class="form-group">
-          <label>Nueva Contraseña</label>
-          <input type="password" class="form-control" pattern=".{6,}" required name="nuepass" ng-model="$ctrl.nuepass">
-          <span class="text-danger" ng-show="!form.nuepass.$valid">la contraseña es obligatoria y tiene que tener un minimo de 6 caracteres</span>
+        <div class="col-md-12">
+          <br>
+          <label>Ingresa la serie del aparato principal</label>
+          <input name="serie" type="text" class="form-control" placeholder="Ingresa aquí el número de serie" validate-on="dirty" required-message="'La serie es obligatoria.'"
+            required ng-model="$ctrl.serie">
         </div>
-      </div>
-
-      <div class="col-md-12">
-        <br>
-        <div class="form-group" ng-class="{ 'has-error': form.valpass.$invalid && !form.valpass.$pristine }">
-          <label for="confirm-password">Confirma contraseña</label>
-          <input type="password" name="valpass" id="confirm-password" pattern=".{6,}" class="form-control" ng-model="$ctrl.valpass"
-            required match="$ctrl.nuepass" />
-          <span class="text-danger" ng-if="$ctrl.nuepass !== $ctrl.valpass" ng-show="form.valpass.$dirty"> La contraseña no coincide</span>
+        <div class="col-md-6 col-md-offset-6 text-right">
+          <br>
+          <button class="btn btn-warning btn-block " ng-click="$ctrl.confirmar()"> Aceptar</button>
         </div>
-      </div>
-
-      <div class="col-md-12">
-
-        <div vc-recaptcha theme="'light'" lang="es" key="$ctrl.captcha.key" on-create="$ctrl.setWidgetId(widgetId)" on-success="$ctrl.setResponse(response)"
-          on-expire="$ctrl.cbExpiration()"></div>
-      </div>
-
-      <div class="col-md-12">
         <br>
-        <button type="submit" ng-disabled="!form.$valid  ||  $ctrl.captcharesponse ==null || $ctrl.showMessageemail==true" class="btn btn-warning btn-block">Cambiar mis datos de acceso</button>
-        <p class="text-muted text-center">(Al aceptar te enviaremos un correo con tus nuevas credenciales de acceso)</p>
-      </div>
+        <div class="col-md-12">
+          <br>
+          <div class="alert alert-warning" role="alert">
+            <i class="fa fa-info-circle" aria-hidden="true"></i> Si necesitas ayuda para saber la ubicación de la serie y el tipo de aparato puedes consultarla aquí
+            <a href="https://realizarpago.stargroup.com.mx:5000/#!/ayuda" class="alert-link">Ayuda</a>
+          </div>
+        </div> 
+      </div>  
     </form>
   </div>
-</div>
+</section>
+
+<!-- -->
+<section id="formulario-recover-submit" ng-if="$ctrl.showresetform" >
+    <div class="col-md-8 col-md-offset-3 col-sm-offset-3 col-sm-12" >
+        <h3 class=" text-center titulo">Proceso de reestablecimiento de contraseña</h3>    
+    </div>
+    <div class="col-md-5 col-md-offset-3 col-sm-5 col-sm-offset-3" >       
+      <form class="login-form" autocomplete="off" name="form" ng-submit="$ctrl.reset()">        
+  
+        <div class="col-md-10">
+          <label>Correo electrónico actual</label>
+          <input type="email" class="form-control" name="correoactual" ng-keyup="$ctrl.valideEmail($ctrl.email)" class="form-control"
+            required ng-model="$ctrl.email">
+          <span class="text-danger" ng-show="$ctrl.wait">
+            <img src="images/Spinner.gif" width="20" height="20"> verificando......</span>
+          <span class="text-danger" ng-show="$ctrl.showMessageemail">
+            <i class="{{$ctrl.iconemail}}"></i>{{$ctrl.messageemail}}</span>
+          <p class="text-help text-danger">
+            <b>¡ Atención !</b> este es el correo de acceso al sistema, al modificarlo tendras que acceder con el nuevo correo
+            registrado </p>
+          <span class="text-danger" ng-show="!form.correoactual.$valid"> ¡No es un correo valido!</span>
+        </div>
+  
+        <div class="col-md-12">
+          <br>
+         
+            <label>Nueva Contraseña</label>
+            <input type="password" class="form-control"
+             pattern=".{6,}" required
+             placeholder="Ingresa tu nueva contraseña"
+              name="nuepass"
+              ng-model="$ctrl.nuepass">
+            <span class="text-danger" ng-show="!form.nuepass.$valid">la contraseña es obligatoria y tiene que tener un minimo de 6 caracteres</span>
+          
+        </div>
+  
+        <div class="col-md-12">
+          <br>
+          <div  ng-class="{ 'has-error': form.valpass.$invalid && !form.valpass.$pristine }">
+            <label>Confirma contraseña</label>
+            <input type="password" name="valpass" id="confirm-password" pattern=".{6,}"
+            placeholder="confirma contraseña"
+             class="form-control" ng-model="$ctrl.valpass"
+              required match="$ctrl.nuepass" />
+            <span class="text-danger" ng-if="$ctrl.nuepass !== $ctrl.valpass" ng-show="form.valpass.$dirty"> La contraseña no coincide</span>
+          </div>
+        </div>
+  
+        <div class="col-md-12 col-sm-12">
+          <br>
+          <div vc-recaptcha theme="'light'" lang="es" key="$ctrl.captcha.key" on-create="$ctrl.setWidgetId(widgetId)" on-success="$ctrl.setResponse(response)"
+            on-expire="$ctrl.cbExpiration()"></div>
+        </div>
+  
+        <div class="col-md-12">
+          <br>
+          <button type="submit" ng-disabled="!form.$valid  ||  $ctrl.captcharesponse ==null || $ctrl.showMessageemail==true" class="btn btn-warning btn-block">Cambiar mis datos de acceso</button>
+          <p class="text-muted text-center">(Al aceptar te enviaremos un correo con tus nuevas credenciales de acceso)</p>
+        </div>
+      </form>
+    </div>
+    <div class="col-md-3 col-sm-12">
+        <div class="alert alert-success" role="alert">
+            <b>¡Correcto!</b> la validación se hizo correctamente,ahora puedes elegir una nueva contraseña y modificar tu correo
+            con el que puedes accesar al sistema</div>
+    </div>
+</section>
+
 
 <!--  -->
 <div class="col-md-6 col-md-offset-3 text-center" ng-if="$ctrl.showsuccess">
 
         <div class="alert alert-success" role="alert">
             <h4>
-                <strong>¡ Bien hecho!</strong> el reestablecimiento de tu contraseña  se ha completado correctamente, ahora puedes consultar tu estado de cuenta 
+                <strong>¡ Bien hecho!</strong> el reestablecimiento de tu contraseña  se ha completado correctamente,
                 solo tienes que iniciar sesión con este correo <b> {{$ctrl.email }} </b> y tu nueva contraseña <br>               
                 <h4> Atención a clientes: 01 800 700 STAR (7827)</h4>
                 
