cambio de tamaño

--- a/app/views/login/login.html
+++ b/app/views/login/login.html
@@ -11,11 +11,13 @@
 
   .formulario-login{
     max-width: 400px;
-    height: 600px;
+    height: auto;
     background-color: white;    
     margin:0 auto;
     margin-top: 50px;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.33);
+    padding-bottom: 30px;
+
   }
 
   .formulario-login img {
@@ -92,10 +94,10 @@
     flex-direction: column;
     align-items: center;
   } 
-     
+
   .submit{   
     margin: 9px;
-    font-size: 15px;
+    font-size: 18px;
     width: 150px;
     padding: 7px;
     background-color: #FFC107;
@@ -137,12 +139,10 @@
         <button type="submit" class="submit"><i class="fa fa-sign-in" aria-hidden="true"></i> Ingresar</button>
     </section>
     <a href="#!/signin">¿Aún no estas registrado?
-      <b> Crear cuenta</b>
+      <b style="color:#337ab7" > Crear cuenta</b>
     </a>
    </form>
-  
-
-</div> 
+  </div> 
 
 
 
